--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -25,10 +25,36 @@ $font-secondary: "Roboto", sans-serif;
 
 body {
   font-family: $font-secondary;
-  margin: 0 15px;
+}
+main {
+  padding: 0 0.9375rem;
 }
 
 h2,
 h3 {
   font-family: $font-primary;
+}
+h2 {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+  color: $clr--black;
+}
+
+.btn {
+  border: none;
+  background: linear-gradient(
+    93.53deg,
+    $clr--accent-light 3.2%,
+    $clr--accent 100%
+  );
+  box-shadow: inset -2px -2px 6px #ffb769;
+  border-radius: 0.9375rem;
+  padding: 1em 3em;
+
+  color: $clr--light;
+  font-family: $font-primary;
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.0625rem;
 }
