--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -14,7 +14,7 @@
     height: 2.5rem;
     width: 12.5rem;
     border: 1px solid $clr--gray;
-    border-radius: 15px;
+    border-radius: 0.9375rem;
   }
   & .btn__search_letter {
     background: transparent;
