--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,5 @@
 @import "./header.scss";
 @import "./navigation.scss";
 @import "./hero.scss";
+@import "./last-added.scss";
+@import "./suggest.scss";
