--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,33 +1,31 @@
 .hero__section {
   background: $clr--black;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   color: $clr--light;
-  padding-top: 24px;
-  padding-bottom: 32px;
-  margin-bottom: 32px;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .hero__img_container {
   text-align: center;
-  padding: 12px 0;
+  padding: 0.75rem 0;
 }
 
 .hero__text_container {
   max-width: 17.375rem;
-  padding-left: 16px;
+  padding-left: 1rem;
 
   .hero__header {
-    font-size: 1.125rem;
-    line-height: 1.375rem;
-    font-weight: 700;
-    margin-top: 23px;
+    color: $clr--light;
+    margin-top: 1.4375rem;
   }
   .hero__subheader {
     font-weight: 400;
     font-size: 0.875rem;
     line-height: 1.0632rem;
-    margin-top: 8px;
-    padding-bottom: 8px;
+    margin-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 }
 
