--- a/styles/main.css
+++ b/styles/main.css
@@ -11,12 +11,35 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  margin: 0 15px;
+}
+
+main {
+  padding: 0 0.9375rem;
 }
 
 h2,
 h3 {
   font-family: "Comfortaa", cursive;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+  color: #2d2d2d;
+}
+
+.btn {
+  border: none;
+  background: linear-gradient(93.53deg, #ffa039 3.2%, #ff7800 100%);
+  box-shadow: inset -2px -2px 6px #ffb769;
+  border-radius: 0.9375rem;
+  padding: 1em 3em;
+  color: #fafafa;
+  font-family: "Comfortaa", cursive;
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.0625rem;
 }
 
 .header {
@@ -26,6 +49,8 @@ h3 {
   background: #fafafa;
   padding-top: 2.125rem;
   padding-bottom: 0.6875rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
 }
 
 .logo__container {
@@ -35,7 +60,7 @@ h3 {
   gap: 0.3125rem;
 }
 .logo__container .btn__expand {
-  margin-left: 3px;
+  margin-left: 0.1875rem;
   position: relative;
   left: 1%;
   top: -30%;
@@ -64,7 +89,7 @@ h3 {
   height: 2.5rem;
   width: 12.5rem;
   border: 1px solid #ababab;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
 }
 .letter__container .btn__search_letter {
   background: transparent;
@@ -76,37 +101,54 @@ h3 {
 
 .hero__section {
   background: #2d2d2d;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   color: #fafafa;
-  padding-top: 24px;
-  padding-bottom: 32px;
-  margin-bottom: 32px;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .hero__img_container {
   text-align: center;
-  padding: 12px 0;
+  padding: 0.75rem 0;
 }
 
 .hero__text_container {
   max-width: 17.375rem;
-  padding-left: 16px;
+  padding-left: 1rem;
 }
 .hero__text_container .hero__header {
-  font-size: 1.125rem;
-  line-height: 1.375rem;
-  font-weight: 700;
-  margin-top: 23px;
+  color: #fafafa;
+  margin-top: 1.4375rem;
 }
 .hero__text_container .hero__subheader {
   font-weight: 400;
   font-size: 0.875rem;
   line-height: 1.0632rem;
-  margin-top: 8px;
-  padding-bottom: 8px;
+  margin-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .socials__container img {
   filter: invert(100);
   filter: brightness(100);
+}
+
+.last-added__section {
+  padding: 1.5rem 0;
+}
+
+.suggest-word__section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+.suggest-word__section p {
+  font-size: 0.875rem;
+  line-height: 1rem;
+  color: #666666;
+}
+.suggest-word__section .btn {
+  margin-top: 0.5rem;
 }/*# sourceMappingURL=main.css.map */
