SCSS BASE & CAROUSEL

--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,6 +1,6 @@
 .hero__section {
   background: $clr--black;
-  border-radius: 0.9375rem;
+  border-radius: $b-rad;
   color: $clr--light;
   padding-top: 1.5rem;
   padding-bottom: 2rem;
