--- a/styles/_suggest.scss
+++ b/styles/_suggest.scss
@@ -3,12 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-
-  p {
-    font-size: 0.875rem;
-    line-height: 1rem;
-    color: $clr--gray-dark;
-  }
+  padding-bottom: 3.125rem;
   .btn {
     margin-top: 0.5rem;
   }
