--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,3 +4,5 @@
 @import "./hero.scss";
 @import "./last-added.scss";
 @import "./suggest.scss";
+@import "./frequently.scss";
+@import "./instagram.scss";
