--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -5,12 +5,18 @@ $clr--gray: #ababab;
 $clr--gray-dark: #666666;
 $clr--black: #2d2d2d;
 $clr--accent: #ff7800;
-$clr--accent-light: #ffa039;
+$clr--accent-1: #ffa039;
+$clr--accent-2: #ffb769;
+$clr--accent-3: #ffe3c5;
 
 // FONTS
 
 $font-primary: "Comfortaa", cursive;
 $font-secondary: "Roboto", sans-serif;
+
+// BORDER-RADIUS
+
+$b-rad: 0.9375rem;
 
 * {
   box-sizing: border-box;
@@ -43,13 +49,9 @@ h2 {
 
 .btn {
   border: none;
-  background: linear-gradient(
-    93.53deg,
-    $clr--accent-light 3.2%,
-    $clr--accent 100%
-  );
-  box-shadow: inset -2px -2px 6px #ffb769;
-  border-radius: 0.9375rem;
+  background: linear-gradient(93.53deg, $clr--accent-1 3.2%, $clr--accent 100%);
+  box-shadow: inset -2px -2px 6px $clr--accent-2;
+  border-radius: $b-rad;
   padding: 1em 3em;
 
   color: $clr--light;
@@ -57,4 +59,53 @@ h2 {
   font-weight: 400;
   font-size: 0.875rem;
   line-height: 1.0625rem;
+}
+
+.section__paragraph {
+  font-size: 0.875rem;
+  line-height: 1rem;
+  color: $clr--gray-dark;
+}
+
+.card {
+  background: $clr--accent-3;
+  width: 9rem;
+  height: 7.8125rem;
+  border-radius: $b-rad;
+
+  .card__img_container {
+    position: relative;
+    top: -5%;
+
+    & .card__img {
+      width: 8.5rem;
+      height: 7.3125rem;
+    }
+  }
+  .card__words {
+    position: relative;
+    top: -30.5%;
+    background: $clr--black;
+    height: 2.628125rem;
+    border-radius: 0px $b-rad $b-rad $b-rad;
+    z-index: 100;
+    color: $clr--light;
+    text-align: center;
+
+    & .serbian__word {
+      font-family: $font-primary;
+      font-weight: 700;
+      font-size: 0.75rem;
+      line-height: 0.9375rem;
+      padding-top: 0.3125rem;
+    }
+
+    & .english__word {
+      font-family: $font-secondary;
+      font-weight: 300;
+      font-size: 0.75rem;
+      line-height: 0.875rem;
+      padding-bottom: 0.3125rem;
+    }
+  }
 }
