--- a/styles/_last-added.scss
+++ b/styles/_last-added.scss
@@ -1,3 +1,32 @@
 .last-added__section {
-  padding: 1.5rem 0;
+  padding-bottom: 2rem;
+  h2 {
+    margin-bottom: 1.5rem;
+  }
+}
+
+.carousel__container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.5rem;
+  margin-bottom: 1.125rem;
+}
+.carousel__card_container {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+.dot__container {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  gap: 0.5rem;
+}
+.dot {
+  background: $clr--gray;
+  height: 0.5rem;
+  width: 0.5rem;
+  border-radius: 50%;
 }
