--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,5 @@
-@import "./config.scss";
+@import "./abstracts/config.scss";
+@import "./abstracts/carousell.scss";
 @import "./header.scss";
 @import "./navigation.scss";
 @import "./hero.scss";
