--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -35,3 +35,32 @@
     filter: brightness(100);
   }
 }
+
+@media (min-width: 48rem) {
+  .hero__section {
+    border-radius: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 4.625rem;
+    padding: 3.5625rem 0;
+
+    & .hero__img_container {
+      padding: 0;
+      & img {
+        max-width: 14.5rem;
+        max-height: 14.5rem;
+      }
+    }
+
+    & .hero__text_container {
+      padding: 0;
+      max-width: 18.875rem;
+    }
+
+    & .subheader__first {
+      font-size: 1rem;
+    }
+  }
+}
