--- a/styles/_last-added.scss
+++ b/styles/_last-added.scss
@@ -5,28 +5,12 @@
   }
 }
 
-.carousel__container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1.5rem;
-  margin-bottom: 1.125rem;
-}
-.carousel__card_container {
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
-}
+@media (min-width: 48rem) {
+  .last-added__section {
+    padding-bottom: 2.8125rem;
 
-.dot__container {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  gap: 0.5rem;
-}
-.dot {
-  background: $clr--gray;
-  height: 0.5rem;
-  width: 0.5rem;
-  border-radius: 50%;
+    .dot__container {
+      display: none;
+    }
+  }
 }
