--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -5,16 +5,39 @@
   padding-top: 1.5rem;
   padding-bottom: 2rem;
   margin-bottom: 2rem;
+
+  @media (min-width: 48rem) {
+    border-radius: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 4.625rem;
+    padding: 3.5625rem 0;
+  }
 }
 
 .hero__img_container {
   text-align: center;
   padding: 0.75rem 0;
+
+  @media (min-width: 48rem) {
+    padding: 0;
+    & img {
+      max-width: 14.5rem;
+      max-height: 14.5rem;
+    }
+  }
 }
 
 .hero__text_container {
   max-width: 17.375rem;
   padding-left: 1rem;
+
+  @media (min-width: 48rem) {
+    padding: 0;
+    max-width: 18.875rem;
+  }
 
   .hero__header {
     color: $clr--light;
@@ -27,40 +50,16 @@
     margin-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
+  .subheader__first {
+    @media (min-width: 48rem) {
+      font-size: 1rem;
+    }
+  }
 }
 
 .socials__container {
   img {
     filter: invert(100);
     filter: brightness(100);
-  }
-}
-
-@media (min-width: 48rem) {
-  .hero__section {
-    border-radius: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 4.625rem;
-    padding: 3.5625rem 0;
-
-    & .hero__img_container {
-      padding: 0;
-      & img {
-        max-width: 14.5rem;
-        max-height: 14.5rem;
-      }
-    }
-
-    & .hero__text_container {
-      padding: 0;
-      max-width: 18.875rem;
-    }
-
-    & .subheader__first {
-      font-size: 1rem;
-    }
   }
 }
