--- a/styles/_instagram.scss
+++ b/styles/_instagram.scss
@@ -43,5 +43,8 @@
     @media (min-width: 48rem) {
       max-width: 15.5rem;
     }
+    @media (min-width: 85.375rem) {
+      max-width: 18.875rem;
+    }
   }
 }
