--- a/styles/_frequently.scss
+++ b/styles/_frequently.scss
@@ -1,6 +1,14 @@
 .frequently__section {
   padding-bottom: 2rem;
+
+  @media (min-width: 85.375rem) {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
+  }
   h2 {
     margin-bottom: 2.1875rem;
+    @media (min-width: 85.375rem) {
+      margin-bottom: 1.5rem;
+    }
   }
 }
