--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -18,11 +18,24 @@
   flex-direction: row;
   align-items: baseline;
   gap: 0.3125rem;
-  & .btn__expand {
+  .logo {
+    height: 1.875rem;
+    @media (min-width: 64rem) {
+      height: 2.25rem;
+    }
+    @media (min-width: 85.375rem) {
+      height: 3.3125rem;
+    }
+  }
+
+  .btn__expand {
     margin-left: 0.1875rem;
     position: relative;
     left: 1%;
     top: -30%;
+    @media (min-width: 85.375rem) {
+      display: none;
+    }
   }
 }
 
@@ -30,4 +43,21 @@
   display: flex;
   flex-direction: row;
   gap: 0.875rem;
+}
+
+.header__nav {
+  & img {
+    @media (min-width: 48rem) {
+      max-width: 1.3125rem;
+      max-height: 1.3125rem;
+    }
+    @media (min-width: 64rem) {
+      max-width: 1.875rem;
+      max-height: 1.875rem;
+    }
+    @media (min-width: 85.375rem) {
+      width: 2.1875rem;
+      width: 2.1875rem;
+    }
+  }
 }
