--- a/styles/_last-added.scss
+++ b/styles/_last-added.scss
@@ -4,7 +4,10 @@
   @media (min-width: 48rem) {
     padding-bottom: 2.8125rem;
   }
-
+  @media (min-width: 85.375rem) {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
+  }
   h2 {
     margin-bottom: 1.5rem;
   }
