--- a/styles/abstracts/_carousell.scss
+++ b/styles/abstracts/_carousell.scss
@@ -4,106 +4,121 @@
   align-items: flex-start;
   gap: 1.5rem;
   margin-bottom: 1.125rem;
-}
-.carousel__card_container {
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
-}
-
-.card {
-  background: $clr--accent-3;
-  width: 9rem;
-  height: 7.8125rem;
-  border-radius: $b-rad;
-
-  .card__img_container {
-    position: relative;
-    top: -5%;
-
-    & .card__img {
-      width: 8.5em;
-      height: 7.3125rem;
-    }
-  }
-  .card__words {
-    position: relative;
-    top: -30.5%;
-    background: $clr--black;
-    height: 2.628125rem;
-    border-radius: 0px $b-rad $b-rad $b-rad;
-    z-index: 100;
-    color: $clr--light;
-    text-align: center;
-
-    & .serbian__word {
-      font-family: $font-primary;
-      font-weight: 700;
-      font-size: 0.75rem;
-      line-height: 0.9375rem;
-      padding-top: 0.3125rem;
-    }
-
-    & .english__word {
-      font-family: $font-secondary;
-      font-weight: 300;
-      font-size: 0.75rem;
-      line-height: 0.875rem;
-      padding-bottom: 0.3125rem;
-    }
-  }
-}
-
-.dot__container {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  gap: 0.5rem;
-}
-.dot {
-  background: $clr--gray;
-  height: 0.5rem;
-  width: 0.5rem;
-  border-radius: 50%;
-}
-
-@media (min-width: 48rem) {
-  .carousel__container {
+  @media (min-width: 48rem) {
     margin: 0;
+  }
+  .carousel__card_container {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
   }
 
   .card {
-    width: 11.8125rem;
-    height: 11.8125rem;
+    background: $clr--accent-3;
+    width: 9rem;
+    height: 7.8125rem;
+    border-radius: $b-rad;
+
+    @media (min-width: 48rem) {
+      width: 11.8125rem;
+      height: 11.8125rem;
+    }
+    @media (min-width: 85.375rem) {
+      width: 14.425rem;
+      height: 14.425rem;
+    }
 
     .card__img_container {
       position: relative;
-      top: 13%;
+      top: -5%;
+
+      @media (min-width: 48rem) {
+        position: relative;
+        top: 13%;
+      }
 
       & .card__img {
-        width: 11.22rem;
-        height: 8.625rem;
+        width: 8.5em;
+        height: 7.3125rem;
+
+        @media (min-width: 48rem) {
+          width: 11.22rem;
+          height: 8.625rem;
+        }
+        @media (min-width: 85.375rem) {
+          width: 13.696rem;
+          height: 10.56875rem;
+        }
       }
     }
-
     .card__words {
       position: relative;
-      top: -4%;
-      height: 3.45rem;
+      top: -30.5%;
+      background: $clr--black;
+      height: 2.628125rem;
+      border-radius: 0px $b-rad $b-rad $b-rad;
+      z-index: 100;
+      color: $clr--light;
+      text-align: center;
+
+      @media (min-width: 48rem) {
+        top: -4%;
+        height: 3.45rem;
+      }
+      @media (min-width: 85.375rem) {
+        height: 4.21625rem;
+      }
 
       & .serbian__word {
-        font-size: 1.25rem;
-        line-height: 1.51875rem;
-        padding-top: 0.45rem;
+        font-family: $font-primary;
+        font-weight: 700;
+        font-size: 0.75rem;
+        line-height: 0.9375rem;
+        padding-top: 0.3125rem;
+
+        @media (min-width: 48rem) {
+          font-size: 1.25rem;
+          line-height: 1.51875rem;
+          padding-top: 0.45rem;
+        }
       }
 
       & .english__word {
-        font-size: 1rem;
-        line-height: 1.1718rem;
+        font-family: $font-secondary;
+        font-weight: 300;
+        font-size: 0.75rem;
+        line-height: 0.875rem;
+        padding-bottom: 0.3125rem;
+
+        @media (min-width: 48rem) {
+          font-size: 1rem;
+          line-height: 1.1718rem;
+        }
       }
     }
   }
+
   .dot__container {
-    transform: scale(2);
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    gap: 0.5rem;
+
+    @media (min-width: 48rem) {
+      transform: scale(2);
+    }
+
+    @media (min-width: 85.375rem) {
+      display: none;
+    }
+  }
+
+  .dot {
+    background: $clr--gray;
+    height: 0.5rem;
+    width: 0.5rem;
+    border-radius: 50%;
   }
 }
+
+// @media (min-width: 85.375rem) {
