--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,12 @@ h2 {
     line-height: 1.899rem;
   }
 }
+@media (min-width: 85.375rem) {
+  h2 {
+    font-size: 1.875rem;
+    line-height: 2.278rem;
+  }
+}
 
 .section__paragraph {
   font-size: 0.875rem;
@@ -44,6 +50,12 @@ h2 {
   .section__paragraph {
     font-size: 1rem;
     line-height: 1.1719rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .section__paragraph {
+    font-size: 1.25rem;
+    line-height: 1.465rem;
   }
 }
 
@@ -90,6 +102,15 @@ h2 {
     padding-right: 8rem;
   }
 }
+@media (min-width: 85.375rem) {
+  .last-added__section,
+.suggest-word__section,
+.frequently__section,
+.instagram__section {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
+  }
+}
 
 .carousel__container {
   display: flex;
@@ -98,28 +119,61 @@ h2 {
   gap: 1.5rem;
   margin-bottom: 1.125rem;
 }
-
-.carousel__card_container {
+@media (min-width: 48rem) {
+  .carousel__container {
+    margin: 0;
+  }
+}
+.carousel__container .carousel__card_container {
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
 }
-
-.card {
+.carousel__container .card {
   background: #ffe3c5;
   width: 9rem;
   height: 7.8125rem;
   border-radius: 0.9375rem;
 }
-.card .card__img_container {
+@media (min-width: 48rem) {
+  .carousel__container .card {
+    width: 11.8125rem;
+    height: 11.8125rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .carousel__container .card {
+    width: 14.425rem;
+    height: 14.425rem;
+  }
+}
+.carousel__container .card .card__img_container {
   position: relative;
   top: -5%;
 }
-.card .card__img_container .card__img {
+@media (min-width: 48rem) {
+  .carousel__container .card .card__img_container {
+    position: relative;
+    top: 13%;
+  }
+}
+.carousel__container .card .card__img_container .card__img {
   width: 8.5em;
   height: 7.3125rem;
 }
-.card .card__words {
+@media (min-width: 48rem) {
+  .carousel__container .card .card__img_container .card__img {
+    width: 11.22rem;
+    height: 8.625rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .carousel__container .card .card__img_container .card__img {
+    width: 13.696rem;
+    height: 10.56875rem;
+  }
+}
+.carousel__container .card .card__words {
   position: relative;
   top: -30.5%;
   background: #2d2d2d;
@@ -129,69 +183,67 @@ h2 {
   color: #fafafa;
   text-align: center;
 }
-.card .card__words .serbian__word {
+@media (min-width: 48rem) {
+  .carousel__container .card .card__words {
+    top: -4%;
+    height: 3.45rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .carousel__container .card .card__words {
+    height: 4.21625rem;
+  }
+}
+.carousel__container .card .card__words .serbian__word {
   font-family: "Comfortaa", cursive;
   font-weight: 700;
   font-size: 0.75rem;
   line-height: 0.9375rem;
   padding-top: 0.3125rem;
 }
-.card .card__words .english__word {
+@media (min-width: 48rem) {
+  .carousel__container .card .card__words .serbian__word {
+    font-size: 1.25rem;
+    line-height: 1.51875rem;
+    padding-top: 0.45rem;
+  }
+}
+.carousel__container .card .card__words .english__word {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 0.75rem;
   line-height: 0.875rem;
   padding-bottom: 0.3125rem;
 }
-
-.dot__container {
+@media (min-width: 48rem) {
+  .carousel__container .card .card__words .english__word {
+    font-size: 1rem;
+    line-height: 1.1718rem;
+  }
+}
+.carousel__container .dot__container {
   display: flex;
   flex-direction: row;
   align-self: center;
   gap: 0.5rem;
 }
-
-.dot {
+@media (min-width: 48rem) {
+  .carousel__container .dot__container {
+    transform: scale(2);
+  }
+}
+@media (min-width: 85.375rem) {
+  .carousel__container .dot__container {
+    display: none;
+  }
+}
+.carousel__container .dot {
   background: #ababab;
   height: 0.5rem;
   width: 0.5rem;
   border-radius: 50%;
 }
 
-@media (min-width: 48rem) {
-  .carousel__container {
-    margin: 0;
-  }
-  .card {
-    width: 11.8125rem;
-    height: 11.8125rem;
-  }
-  .card .card__img_container {
-    position: relative;
-    top: 13%;
-  }
-  .card .card__img_container .card__img {
-    width: 11.22rem;
-    height: 8.625rem;
-  }
-  .card .card__words {
-    position: relative;
-    top: -4%;
-    height: 3.45rem;
-  }
-  .card .card__words .serbian__word {
-    font-size: 1.25rem;
-    line-height: 1.51875rem;
-    padding-top: 0.45rem;
-  }
-  .card .card__words .english__word {
-    font-size: 1rem;
-    line-height: 1.1718rem;
-  }
-  .dot__container {
-    transform: scale(2);
-  }
-}
 .header {
   display: flex;
   flex-direction: row;
@@ -215,17 +267,54 @@ h2 {
   align-items: baseline;
   gap: 0.3125rem;
 }
+.logo__container .logo {
+  height: 1.875rem;
+}
+@media (min-width: 64rem) {
+  .logo__container .logo {
+    height: 2.25rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .logo__container .logo {
+    height: 3.3125rem;
+  }
+}
 .logo__container .btn__expand {
   margin-left: 0.1875rem;
   position: relative;
   left: 1%;
   top: -30%;
 }
+@media (min-width: 85.375rem) {
+  .logo__container .btn__expand {
+    display: none;
+  }
+}
 
 .header__nav {
   display: flex;
   flex-direction: row;
   gap: 0.875rem;
+}
+
+@media (min-width: 48rem) {
+  .header__nav img {
+    max-width: 1.3125rem;
+    max-height: 1.3125rem;
+  }
+}
+@media (min-width: 64rem) {
+  .header__nav img {
+    max-width: 1.875rem;
+    max-height: 1.875rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .header__nav img {
+    width: 2.1875rem;
+    width: 2.1875rem;
+  }
 }
 
 .main__nav {
@@ -238,6 +327,17 @@ h2 {
 @media (min-width: 48rem) {
   .main__nav {
     padding-top: 2.8125rem;
+  }
+}
+@media (min-width: 48rem) {
+  .main__nav .btn__nav_expand img {
+    width: 1.95rem;
+    height: 0.9225rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .main__nav .btn__nav_expand img {
+    display: none;
   }
 }
 
@@ -258,6 +358,12 @@ h2 {
     width: 15.5rem;
   }
 }
+@media (min-width: 85.375rem) {
+  .letter__container .letters {
+    height: 2.5rem;
+    width: 44.375rem;
+  }
+}
 .letter__container .btn__search_letter {
   background: transparent;
   width: 2.5rem;
@@ -271,6 +377,12 @@ h2 {
     width: 3rem;
   }
 }
+@media (min-width: 85.375rem) {
+  .letter__container .btn__search_letter {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
+}
 .letter__container .btn__search_letter img {
   width: 1.13125rem;
   height: 1.13125rem;
@@ -281,10 +393,10 @@ h2 {
     height: 1.266875rem;
   }
 }
-@media (min-width: 48rem) {
-  .letter__container .btn__nav_expand {
-    width: 1.95rem;
-    height: 0.9225rem;
+@media (min-width: 85.375rem) {
+  .letter__container .btn__search_letter img {
+    width: 1.2194rem;
+    height: 1.2194rem;
   }
 }
 
@@ -307,6 +419,11 @@ h2 {
     padding: 3.5625rem 0;
   }
 }
+@media (min-width: 85.375rem) {
+  .hero__section {
+    gap: 10.25rem;
+  }
+}
 
 .hero__img_container {
   text-align: center;
@@ -316,9 +433,17 @@ h2 {
   .hero__img_container {
     padding: 0;
   }
+}
+@media (min-width: 48rem) {
   .hero__img_container img {
     max-width: 14.5rem;
     max-height: 14.5rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .hero__img_container img {
+    max-width: 22.125rem;
+    max-height: 22.125rem;
   }
 }
 
@@ -330,6 +455,11 @@ h2 {
   .hero__text_container {
     padding: 0;
     max-width: 18.875rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .hero__text_container {
+    max-width: 28rem;
   }
 }
 .hero__text_container .hero__header {
@@ -346,6 +476,7 @@ h2 {
 @media (min-width: 48rem) {
   .hero__text_container .subheader__first {
     font-size: 1rem;
+    line-height: 1.215rem;
   }
 }
 
@@ -360,6 +491,12 @@ h2 {
 @media (min-width: 48rem) {
   .last-added__section {
     padding-bottom: 2.8125rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .last-added__section {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
   }
 }
 .last-added__section h2 {
@@ -381,12 +518,34 @@ h2 {
 .suggest-word__section .btn {
   margin-top: 0.5rem;
 }
+@media (min-width: 48rem) {
+  .suggest-word__section {
+    gap: 1rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .suggest-word__section {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
+  }
+}
 
 .frequently__section {
   padding-bottom: 2rem;
 }
+@media (min-width: 85.375rem) {
+  .frequently__section {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
+  }
+}
 .frequently__section h2 {
   margin-bottom: 2.1875rem;
+}
+@media (min-width: 85.375rem) {
+  .frequently__section h2 {
+    margin-bottom: 1.5rem;
+  }
 }
 
 .title__align {
@@ -440,5 +599,10 @@ h2 {
 @media (min-width: 48rem) {
   .img__container img {
     max-width: 15.5rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .img__container img {
+    max-width: 18.875rem;
   }
 }/*# sourceMappingURL=main.css.map */
