MEDIA QUERY 1440PX

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -11,6 +11,10 @@
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
+  @media (min-width: 90rem) {
+    padding-top: 1.977rem;
+    padding-bottom: 1.53rem;
+  }
 }
 
 .logo__container {
@@ -25,6 +29,9 @@
     }
     @media (min-width: 85.375rem) {
       height: 3.3125rem;
+    }
+    @media (min-width: 90rem) {
+      height: 3.5rem;
     }
   }
 
@@ -57,7 +64,9 @@
     }
     @media (min-width: 85.375rem) {
       width: 2.1875rem;
-      width: 2.1875rem;
+    }
+    @media (min-width: 90rem) {
+      width: 2.3125rem;
     }
   }
 }
