--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -18,6 +18,9 @@
   @media (min-width: 85.375rem) {
     gap: 10.25rem;
   }
+  @media (min-width: 90rem) {
+    gap: 11.5rem;
+  }
 }
 
 .hero__img_container {
