--- a/styles/main.css
+++ b/styles/main.css
@@ -22,22 +22,32 @@ h3 {
   font-family: "Comfortaa", cursive;
 }
 
-h2 {
+h2,
+.instagram__link {
   font-weight: 700;
   font-size: 1.125rem;
   line-height: 1.375rem;
   color: #2d2d2d;
 }
 @media (min-width: 48rem) {
-  h2 {
+  h2,
+.instagram__link {
     font-size: 1.5625rem;
     line-height: 1.899rem;
   }
 }
 @media (min-width: 85.375rem) {
-  h2 {
+  h2,
+.instagram__link {
     font-size: 1.875rem;
     line-height: 2.278rem;
+  }
+}
+@media (min-width: 90rem) {
+  h2,
+.instagram__link {
+    font-size: 2rem;
+    line-height: 2.43rem;
   }
 }
 
@@ -56,6 +66,12 @@ h2 {
   .section__paragraph {
     font-size: 1.25rem;
     line-height: 1.465rem;
+  }
+}
+@media (min-width: 90rem) {
+  .section__paragraph {
+    font-size: 1.375rem;
+    line-height: 1.61rem;
   }
 }
 
@@ -79,36 +95,6 @@ h2 {
 @media (min-width: 48rem) {
   .btn {
     font-size: 1rem;
-  }
-}
-
-@media (min-width: 48rem) {
-  .main__nav,
-.last-added__section,
-.suggest-word__section,
-.frequently__section,
-.instagram__section {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-
-@media (min-width: 64rem) {
-  .last-added__section,
-.suggest-word__section,
-.frequently__section,
-.instagram__section {
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-}
-@media (min-width: 85.375rem) {
-  .last-added__section,
-.suggest-word__section,
-.frequently__section,
-.instagram__section {
-    padding: 0 10.75rem;
-    margin-top: 3.5rem;
   }
 }
 
@@ -260,6 +246,12 @@ h2 {
     padding-right: 2.5rem;
   }
 }
+@media (min-width: 90rem) {
+  .header {
+    padding-top: 1.977rem;
+    padding-bottom: 1.53rem;
+  }
+}
 
 .logo__container {
   display: flex;
@@ -278,6 +270,11 @@ h2 {
 @media (min-width: 85.375rem) {
   .logo__container .logo {
     height: 3.3125rem;
+  }
+}
+@media (min-width: 90rem) {
+  .logo__container .logo {
+    height: 3.5rem;
   }
 }
 .logo__container .btn__expand {
@@ -313,7 +310,11 @@ h2 {
 @media (min-width: 85.375rem) {
   .header__nav img {
     width: 2.1875rem;
-    width: 2.1875rem;
+  }
+}
+@media (min-width: 90rem) {
+  .header__nav img {
+    width: 2.3125rem;
   }
 }
 
@@ -327,6 +328,12 @@ h2 {
 @media (min-width: 48rem) {
   .main__nav {
     padding-top: 2.8125rem;
+  }
+}
+@media (min-width: 90rem) {
+  .main__nav {
+    padding-top: 2.5rem;
+    padding-bottom: 3.75rem;
   }
 }
 @media (min-width: 48rem) {
@@ -345,6 +352,11 @@ h2 {
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
+}
+@media (min-width: 90rem) {
+  .letter__container {
+    gap: 2rem;
+  }
 }
 .letter__container .letters {
   height: 2.5rem;
@@ -422,6 +434,11 @@ h2 {
 @media (min-width: 85.375rem) {
   .hero__section {
     gap: 10.25rem;
+  }
+}
+@media (min-width: 90rem) {
+  .hero__section {
+    gap: 11.5rem;
   }
 }
 
@@ -568,17 +585,14 @@ h2 {
     width: 2.016rem;
   }
 }
+@media (min-width: 85.375rem) {
+  .instagram__icon {
+    width: 2.3125rem;
+  }
+}
 
 .instagram__link {
   color: #ff7800;
-  font-size: 1.125rem;
-  line-height: 1.375;
-}
-@media (min-width: 48rem) {
-  .instagram__link {
-    font-size: 1.5625rem;
-    line-height: 1.89875;
-  }
 }
 
 .img__container {
@@ -590,6 +604,11 @@ h2 {
 @media (min-width: 48rem) {
   .img__container {
     padding-top: 1.5rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .img__container {
+    padding-top: 2rem;
   }
 }
 .img__container img {
@@ -604,5 +623,49 @@ h2 {
 @media (min-width: 85.375rem) {
   .img__container img {
     max-width: 18.875rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .img__container img {
+    max-width: 20.0625rem;
+  }
+}
+
+@media (min-width: 48rem) {
+  .main__nav,
+.last-added__section,
+.suggest-word__section,
+.frequently__section,
+.instagram__section {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+
+@media (min-width: 64rem) {
+  .last-added__section,
+.suggest-word__section,
+.frequently__section,
+.instagram__section {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .last-added__section,
+.suggest-word__section,
+.frequently__section,
+.instagram__section {
+    padding: 0 10.75rem;
+    margin-top: 3.5rem;
+  }
+}
+@media (min-width: 90rem) {
+  .last-added__section,
+.suggest-word__section,
+.frequently__section,
+.instagram__section {
+    padding: 0 7.5625rem;
+    margin-top: 4.5rem;
   }
 }/*# sourceMappingURL=main.css.map */
