--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -8,6 +8,10 @@
   @media (min-width: 48rem) {
     padding-top: 2.8125rem;
   }
+  @media (min-width: 90rem) {
+    padding-top: 2.5rem;
+    padding-bottom: 3.75rem;
+  }
   .btn__nav_expand {
     & img {
       @media (min-width: 48rem) {
@@ -25,6 +29,10 @@
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
+
+  @media (min-width: 90rem) {
+    gap: 2rem;
+  }
   .letters {
     height: 2.5rem;
     width: 12.5rem;
