MEDIA QUERY 1920PX

--- a/styles/_instagram.scss
+++ b/styles/_instagram.scss
@@ -45,8 +45,11 @@
     @media (min-width: 85.375rem) {
       max-width: 18.875rem;
     }
-    @media (min-width: 85.375rem) {
+    @media (min-width: 90rem) {
       max-width: 20.0625rem;
+    }
+    @media (min-width: 120rem) {
+      max-width: 26.9375rem;
     }
   }
 }
