--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -21,6 +21,10 @@
   @media (min-width: 90rem) {
     gap: 11.5rem;
   }
+  @media (min-width: 120rem) {
+    gap: 21.25rem;
+    padding: 4.6875rem;
+  }
 }
 
 .hero__img_container {
@@ -57,6 +61,13 @@
   .hero__header {
     color: $clr--light;
     margin-top: 1.4375rem;
+
+    @media (min-width: 90rem) {
+      font-size: 2.375rem;
+    }
+    @media (min-width: 120rem) {
+      font-size: 3.052rem;
+    }
   }
   .hero__subheader {
     font-weight: 400;
@@ -64,11 +75,23 @@
     line-height: 1.0632rem;
     margin-top: 0.5rem;
     padding-bottom: 0.5rem;
+
+    @media (min-width: 90rem) {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+      line-height: 1.215rem;
+    }
   }
   .subheader__first {
     @media (min-width: 48rem) {
       font-size: 1rem;
       line-height: 1.215rem;
+    }
+    @media (min-width: 90rem) {
+      font-size: 1.125rem;
+      line-height: 1.367rem;
+      margin-top: 1rem;
+      margin-bottom: 2.5rem;
     }
   }
 }
@@ -77,5 +100,9 @@
   img {
     filter: invert(100);
     filter: brightness(100);
+
+    @media (min-width: 85.375rem) {
+      width: 2.3625rem;
+    }
   }
 }
