--- a/styles/main.css
+++ b/styles/main.css
@@ -79,6 +79,9 @@ h2,
   border: none;
   background: transparent;
 }
+.icon__btn :hover {
+  cursor: pointer;
+}
 
 .btn {
   border: none;
@@ -98,6 +101,10 @@ h2,
   }
 }
 
+.hidden {
+  display: none;
+}
+
 .carousel__container {
   display: flex;
   flex-direction: column;
@@ -114,6 +121,8 @@ h2,
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
+  overflow: hidden;
+  max-width: 100%;
 }
 .carousel__container .card {
   background: #ffe3c5;
@@ -352,7 +361,7 @@ h2,
   }
 }
 
-.main__nav {
+.nav__container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -360,24 +369,24 @@ h2,
   padding-bottom: 3.5rem;
 }
 @media (min-width: 48rem) {
-  .main__nav {
+  .nav__container {
     padding-top: 2.8125rem;
   }
 }
 @media (min-width: 90rem) {
-  .main__nav {
+  .nav__container {
     padding-top: 2.5rem;
     padding-bottom: 3.75rem;
   }
 }
 @media (min-width: 48rem) {
-  .main__nav .btn__nav_expand img {
+  .nav__container .btn__nav_expand img {
     width: 1.95rem;
     height: 0.9225rem;
   }
 }
 @media (min-width: 85.375rem) {
-  .main__nav .btn__nav_expand img {
+  .nav__container .btn__nav_expand img {
     display: none;
   }
 }
@@ -446,6 +455,42 @@ h2,
   }
 }
 
+.drop-menu__container {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: #fafafa;
+  min-width: 11.6875rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding-top: 7.5rem;
+  padding-bottom: 2.5rem;
+}
+.drop-menu__container .remove__menu {
+  position: relative;
+  left: 80%;
+  padding-bottom: 1rem;
+}
+.drop-menu__container .links {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+}
+.drop-menu__container .link {
+  font-family: "Comfortaa", cursive;
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.063rem;
+  color: #666666;
+  text-decoration: none;
+}
+.drop-menu__container .link:hover {
+  color: #ff7800;
+}
+
 .hero__section {
   background: #2d2d2d;
   border-radius: 0.9375rem;
@@ -491,11 +536,9 @@ h2,
     padding: 0;
   }
 }
-@media (min-width: 48rem) {
-  .hero__img_container img {
-    max-width: 14.5rem;
-    max-height: 14.5rem;
-  }
+.hero__img_container img {
+  max-width: 14.5rem;
+  max-height: 14.5rem;
 }
 @media (min-width: 85.375rem) {
   .hero__img_container img {
